--- a/politico/ex1/index.html
+++ b/politico/ex1/index.html
@@ -6,7 +6,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'proxima-nova', sans-serif;
         }
         svg {
             font-size: 12px;
