--- a/politico/ex1/index.html
+++ b/politico/ex1/index.html
@@ -10,6 +10,7 @@
         }
         svg {
             font-size: 12px;
+            font-family: "Roboto",Arial,sans-serif;
         }
     </style>
 </head>
